traces/bug_214.txt
#214
kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:552: error: Deadlock
  Potential self deadlock. `CheckpointTest_ItemsForCheckpointCursor_Test::TestBody` locks `&(this->manager->queueLock)` in `class CheckpointTest_ItemsForCheckpointCursor_Test` twice.

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:552:5: In method `CheckpointTest_ItemsForCheckpointCursor_Test::TestBody`
550.     // Also, we want to have items across 2 checkpoints.
551.     ASSERT_EQ(2, checkpoint_config->getMaxCheckpoints());
552.     createManager();
         ^
553. 
554.     /* Add items such that we have 2 checkpoints */

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:552:5: Method call: `CheckpointTest::createManager`
550.     // Also, we want to have items across 2 checkpoints.
551.     ASSERT_EQ(2, checkpoint_config->getMaxCheckpoints());
552.     createManager();
         ^
553. 
554.     /* Add items such that we have 2 checkpoints */

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:77:17: Method call: `CheckpointManager::registerCursorBySeqno`
75.     } else {
76.         cursor =
77.                 manager->registerCursorBySeqno("test_cursor",
                    ^
78.                                                0,
79.                                                CheckpointCursor::Droppable::Yes)

kv_engine/engines/ep/src/checkpoint_manager.cc:259:33:  locks `&(this->manager->queueLock)` in `class CheckpointTest_ItemsForCheckpointCursor_Test`
257.         uint64_t startBySeqno,
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
                                     ^
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
261. }

kv_engine/engines/ep/src/checkpoint_manager.cc:260:12: Method call: `CheckpointManager::registerCursorBySeqno`
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
                ^
261. }
262. 

kv_engine/engines/ep/src/checkpoint_manager.cc:283:13: Method call: `CheckpointManager::removeCursor`
281.     for (const auto& cursor : cursors) {
282.         if (cursor.first == name) {
283.             removeCursor(lh, cursor.second.get());
                 ^
284.             break;
285.         }

kv_engine/engines/ep/src/checkpoint_manager.cc:474:9:  locks `&(this->manager->queueLock)` in `class CheckpointTest_ItemsForCheckpointCursor_Test`
472.         queueLock.unlock();
473.         runGetItemsHook(cursor, vb.getId());
474.         queueLock.lock();
             ^
475.     }
476. 
